本地逻辑适配

--- a/owl/.env_template
+++ b/owl/.env_template
@@ -3,9 +3,9 @@
 # (See https://docs.camel-ai.org/key_modules/models.html#)
 #===========================================
 
-# OPENAI API (https://platform.openai.com/api-keys)
-OPENAI_API_KEY='Your_Key'
-# OPENAI_API_BASE_URL=""
+# OPENAI API
+OPENAI_API_KEY= "83bc670f-d388-4500-b1b3-e7dd7ca035df"
+OPENAI_API_BASE_URL="http://gpt-proxy.jd.com"
 
 # When using GROQ remember to set OPENAI_API_BASE_URL to https://api.groq.com/openai/v1 to use the groq model according to https://console.groq.com/docs/openai
 # and set OPENAI_API_KEY equal to GROQ_API_KEY
